Join MultiLine graph
What I do:
As title.  Also add some my testing.

Author: Joey

--- a/app/src/main/res/layout/activity_line.xml
+++ b/app/src/main/res/layout/activity_line.xml
@@ -17,9 +17,20 @@
         android:id="@+id/btnBasic"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:text="Simple line chart"
         app:layout_constraintEnd_toStartOf="@+id/guideline_50Vper"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnMulti"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin ="5dp"
+        android:text="Multi line chart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline_50Vper"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
